crates/lang/macro/tests/ui/contract/fail/M-04-message-returns-non-codec.stderr
error[E0277]: the trait bound `NonCodec: WrapperTypeEncode` is not satisfied
   --> $DIR/M-04-message-returns-non-codec.rs:18:9
    |
18  | /         pub fn returns_non_codec_type(&self) -> NonCodec {
19  | |             NonCodec
20  | |         }
    | |_________^ the trait `WrapperTypeEncode` is not implemented for `NonCodec`
    |
    = note: required because of the requirements on the impl of `Encode` for `NonCodec`
note: required by a bound in `execute_message`
   --> $DIR/dispatcher.rs:120:13
    |
120 |     Output: scale::Encode + 'static,
    |             ^^^^^^^^^^^^^ required by this bound in `execute_message`

error[E0599]: the method `fire` exists for struct `ink_env::call::CallBuilder<DefaultEnvironment, Set<ink_env::AccountId>, Unset<u64>, Unset<u128>, Set<ExecutionInput<ArgumentList<ArgumentListEnd, ArgumentListEnd>>>, Set<ReturnType<NonCodec>>>`, but its trait bounds were not satisfied
  --> $DIR/M-04-message-returns-non-codec.rs:18:9
   |
6  |       pub struct NonCodec;
   |       -------------------- doesn't satisfy `_: message_returns_non_codec::_::_parity_scale_codec::Decode`
...
18 | /         pub fn returns_non_codec_type(&self) -> NonCodec {
19 | |             NonCodec
20 | |         }
   | |_________^ method cannot be called on `ink_env::call::CallBuilder<DefaultEnvironment, Set<ink_env::AccountId>, Unset<u64>, Unset<u128>, Set<ExecutionInput<ArgumentList<ArgumentListEnd, ArgumentListEnd>>>, Set<ReturnType<NonCodec>>>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `NonCodec: message_returns_non_codec::_::_parity_scale_codec::Decode`
